# pegainfer

./: Cargo.toml  NOTICE_DYNAMO  README.md
docs/: index.md
docs/benchmarks/: deepseek-v2-lite-vllm-tp2-ep2-2026-06.md  qwen-mixed-sampling-http.md  qwen35-4b-serving-vllm-rtx5090.md
docs/lessons/: moe-bench-prompt-diversity.md  profile-diff-before-blaming-transport.md
docs/playbooks/: developer-onboarding.md
docs/roadmap/: execution.md
dynamo-kv-router/: Cargo.toml
dynamo-memory/src/: actions.rs  arena.rs  disk.rs  external.rs  nixl.rs  offset.rs  prelude.rs  system.rs  tensor.rs  tests.rs
kvbm-engine/: README.md
kvbm-engine/docs/: offload-developer.md  offload.md
openinfer-core/src/: ops.rs
openinfer-deepseek-v2-lite/: Cargo.toml
openinfer-deepseek-v2-lite/src/: device.rs  engine.rs  host_ops.rs  lib.rs  model.rs  nccl_backend.rs  runtime.rs  scheduler.rs  weights.rs
openinfer-deepseek-v2-lite/tests/: e2e_ep2.rs
openinfer-dynamo-backend/: Cargo.toml
openinfer-dynamo-backend/.cargo/: config.toml
openinfer-dynamo-backend/src/: convert.rs  engine.rs  main.rs
openinfer-dynamo-frontend/: Cargo.toml
openinfer-dynamo-frontend/.cargo/: config.toml
openinfer-dynamo-frontend/src/: main.rs
openinfer-engine/src/: engine.rs  sampler.rs
openinfer-glm52/: Cargo.toml
openinfer-glm52/src/: fp8.rs  indexer.rs  indexer_oracle_gate.rs  indexer_smoke.rs  lib.rs  mla_decode.rs
openinfer-kernels/: Cargo.toml  build.rs
openinfer-kernels/examples/: triton_cubin_tvm_ffi.rs
openinfer-kernels/src/: ffi.rs  lib.rs  ops.rs  tensor.rs  triton_cubin.rs  typed_ops.rs
openinfer-kernels/tests/: batch_invariance_gemm.rs  glm52_indexer_smoke.rs
openinfer-kimi-k2/src/: batch_decode_trace.rs
openinfer-kimi-k2/tests/: vllm_golden_gate.rs
openinfer-kv-cache/: Cargo.toml
openinfer-kv-cache/src/: lib.rs  manager.rs  pool.rs
openinfer-kv-offload/: Cargo.toml
openinfer-kv-offload/src/: engine.rs
openinfer-qwen3-4b/src/: executor.rs  lib.rs  scheduler.rs  unified_forward.rs  weights.rs
openinfer-qwen3-4b/tests/: batch_invariance_decode_gemm_graph.rs  batch_invariance_endtoend.rs  batch_invariance_envelope.rs  batch_invariance_reject.rs  batch_invariance_unified.rs  kv_offload_cpu_hit.rs  lora_smoke.rs  scheduler_robustness.rs
openinfer-qwen3/src/: executor.rs  kernel_bench.rs  unified_forward.rs
openinfer-qwen35-4b/src/: batch_decode.rs  decode_buffers.rs  executor.rs  kernel_plan.rs  ops.rs  prefill.rs  prefill_buffers.rs  scheduler.rs  unified_forward.rs  weights.rs
openinfer-sample/benches/: select_batch.rs
openinfer-sample/src/: lib.rs
openinfer-sample/tests/: select_batch.rs
openinfer-server/src/: config.rs  main.rs
openinfer-vllm-frontend/src/: bridge.rs  lib.rs  sampling_guard.rs  wire.rs
pegainfer-bench/src/: lib.rs
pegainfer-comm/: Cargo.toml  pyproject.toml
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/: Cargo.toml  build.rs
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/src/a2a/: a2a_combine_recv.cu  a2a_combine_send.cu  a2a_dispatch_recv.cu  a2a_kernels.h
pegainfer-comm/crates/pegainfer-comm-build-utils/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-build-utils/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-cuda-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-cuda-lib/src/: cumem.rs  lib.rs
pegainfer-comm/crates/pegainfer-comm-cuda-sys/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-cuda-sys/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-cudart-sys/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-cudart-sys/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-fabric-debug/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-fabric-debug/src/: hw_rdma_impl.rs  main.rs
pegainfer-comm/crates/pegainfer-comm-fabric-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-fabric-lib/src/: domain_group.rs  error.rs  fabric_engine.rs  lib.rs  mr.rs  provider_dispatch.rs  topo.rs  worker.rs
pegainfer-comm/crates/pegainfer-comm-gdrapi-sys/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-gdrapi-sys/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-libibverbs-sys/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-libibverbs-sys/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-logging-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-p2p-all-to-all/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-p2p-all-to-all/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-proc-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-proc-lib/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-python-ext/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-thread-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-torch-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-torch-lib/src/: hw_cuda_impl.rs  lib.rs  torch_lib.h
pegainfer-comm/python/pplx_garden/kernels/: p2p_all_to_all.py
pegainfer-comm/src/: buffer.rs  error.rs  handle.rs  trait.rs
pegainfer-comm/src/backend/: mod.rs
pegainfer-comm/src/bootstrap/: pplx.rs
pegainfer-core/: Cargo.toml
pegainfer-core/src/: cpu_topology.rs  engine.rs  ops.rs  page_pool.rs  parallel.rs
pegainfer-deepseek-v2-lite/: Cargo.toml
pegainfer-deepseek-v2-lite/src/: attribution.rs  host_ops.rs  model.rs  runtime.rs
pegainfer-deepseek-v2-lite/tests/: e2e_ep2.rs
pegainfer-deepseek-v4/src/: e2e_runner.rs
pegainfer-engine/src/: engine.rs  lib.rs  parallel.rs
pegainfer-kernels/: Cargo.toml  build.rs
pegainfer-kernels/csrc/: flashinfer_norm.cu  fused_proj.cu
pegainfer-kernels/src/: ffi.rs  ops.rs  tensor.rs  typed_ops.rs
pegainfer-kimi-k2/: Cargo.toml
pegainfer-kv-cache/: Cargo.toml
pegainfer-qwen3-4b/: Cargo.toml
pegainfer-qwen35-4b/: Cargo.toml
pegainfer-server/: Cargo.toml
pegainfer-vllm-support/: Cargo.toml
scripts/: bench_dsv2lite_vllm_matrix.py  bench_http_serving.py  bench_http_sweep.py
test_data/: qwen3-4b-hf-golden.safetensors
tests/: test_bench_dsv2lite_vllm_matrix.py  test_bench_http_serving.py  test_bench_http_sweep.py
(+179 files in other folders)
