[package]
name = "openinfer-dynamo-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Dynamo backend worker that serves openinfer (Qwen3) behind a Dynamo frontend + KV router."

[[bin]]
name = "openinfer-dynamo-backend"
path = "src/main.rs"

[dependencies]
# Engine request/event contract (lean: depends only on tokio). The types here
# are *identical* to what `openinfer_qwen3_4b::launch` returns — openinfer-core
# re-exports this very module (`pub use openinfer_engine::engine::*`), so the
# EngineHandle flows through without a translation layer.
openinfer-engine = { path = "../openinfer-engine" }
# Qwen3 model load. Pulls the CUDA/cuBLAS/kernels stack — this binary is a real
# GPU serving worker, not a stub.
openinfer-qwen3-4b = { path = "../openinfer-qwen3-4b" }

# Dynamo backend-worker framework: the LLMEngine trait, the Worker lifecycle
# driver, and `run()`. Pinned to the SAME rev as the dynamo deps in the main
# pegainfer workspace so the shared git checkout (and its internal type
# identity) stay consistent.
dynamo-backend-common = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884" }
# KV-router event protocol types (KvCacheEvent / KvCacheStoreData / ...). Not
# re-exported by backend-common, so depended on directly — same rev so the
# `KvCacheEvent` we build is the exact type `KvEventPublisher::publish` accepts.
dynamo-kv-router = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884" }

anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
# Same rev as the runtime dep above; the `testing` feature unlocks
# `dynamo_backend_common::testing::run_conformance`, the official LLMEngine
# conformance kit the GPU integration test in `engine.rs` drives.
dynamo-backend-common = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884", features = ["testing"] }

# Separate workspace on purpose. This keeps dynamo-runtime / dynamo-llm and
# their heavy transitive deps (tonic, kube, etcd, NATS) OUT of the main
# pegainfer `--workspace` build graph, so plain single-machine openinfer
# (`cargo run --release -- --model-path ...`) and `cargo test --workspace
# --lib` stay dynamo-free and fast. The `path = "../openinfer-*"` deps above
# still resolve their `{ workspace = true }` inheritance against the pegainfer
# root workspace (cargo walks up to each package's own workspace), so nothing
# about those crates changes.
[workspace]
