[package]
name = "openinfer-dynamo-frontend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure-Rust Dynamo OpenAI HTTP frontend + KV router launcher (no Python). Drives dynamo_llm's run_input(Input::Http) directly."

[[bin]]
name = "openinfer-dynamo-frontend"
path = "src/main.rs"

[dependencies]
# The frontend data plane (axum HTTP server, OpenAI preprocessor, KV router,
# model-discovery watcher) lives entirely in dynamo-llm. `default-features =
# false` drops the `block-manager` feature (nixl-sys + cudarc) — this frontend
# never touches a GPU, so it stays a light CPU-only binary. Same dep shape the
# Python binding uses for its no-GPU build, pinned to the SAME rev as the
# openinfer-dynamo-backend deps so the shared git checkout / type identity hold.
dynamo-llm = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884", default-features = false }
# Worker / Runtime / DistributedRuntime + RouterMode.
dynamo-runtime = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Separate workspace on purpose — keeps dynamo-runtime/llm and their heavy
# transitive deps (tonic, kube, etcd, NATS) OUT of the main pegainfer
# `--workspace` build graph. See the root Cargo.toml exclude note.
[workspace]
