[package]
name = "openinfer-glm52"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false

[[bin]]
name = "glm52_load_weights"
path = "src/bin/glm52_load_weights.rs"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
openinfer-core = { workspace = true }
openinfer-kernels = { workspace = true, features = ["glm52"] }
safetensors = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
