[package]
name = "openinfer-kv-cache"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
openinfer-kernels = { workspace = true }
kvbm-logical = { workspace = true }
dynamo-tokens = { workspace = true }
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dynamo-kv-hashing = { workspace = true }

[lints]
workspace = true
