[package]
name = "openinfer-kv-offload"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embedded in-process: pegaflow-core is the host/SSD/RDMA KV offload tier.
# Pinned to the upstream master commit that landed the changes openinfer needs:
# block_stride_bytes (#331), the in-process load API (#333), and the tokio
# floor downgrade to 1.48.0 (#364) so pegaflow can coexist with dynamo's
# `tokio =1.48.0` exact pin in openinfer-dynamo-backend. Bump the rev when
# upstreaming further pegaflow changes; co-develop via a temporary path dep +
# PR, then re-pin here.
# default-features=false drops its `cuda-12` (which would pull a clashing
# cudarc/cuda-12080 selector) and `rdma` (no RDMA hardware needed for the
# dense GPU<->CPU path). The workspace cudarc already provides cuda-12090 +
# nvrtc, which is all pegaflow-core's code needs — it has no cfg(cuda-12) gates.
pegaflow-core = { git = "https://github.com/novitalabs/pegaflow.git", rev = "30a8e1ae5f5be7b7d558c451e5369905e048ba7e", default-features = false }
openinfer-kv-cache = { workspace = true }
cudarc = { workspace = true }
anyhow = { workspace = true }
half = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
