[package]
name = "pegainfer-comm"
edition = "2024"
publish = false
description = "PegaInfer comm-backend public surface (EP all-to-all first; future data-movement surfaces later). Default-feature surface is hardware-free; hardware backends live behind feature gates."

[features]
# Default-feature surface is pure Rust: trait, plan, handle, buffer, error,
# builder. NO dependency on any wrapper crate type.
default = []
# Hardware backend activator. Pulls in the upstream-derived EP all-to-all
# implementation (which itself transitively activates CUDA subsystems).
# Compiling with this feature requires the matching CUDA, RDMA Verbs, and
# GDRCopy development / runtime components on the host.
hw-rdma = ["dep:p2p-all-to-all", "p2p-all-to-all/hw-rdma"]

[dependencies]
thiserror = { workspace = true }
# Hardware-only dependency. Default-feature builds MUST NOT link this.
p2p-all-to-all = { path = "crates/pegainfer-comm-p2p-all-to-all", package = "pegainfer-comm-p2p-all-to-all", optional = true }
