[package]
name = "pegainfer-deepseek-v2-lite"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false
autotests = false

[features]
default = []
deepseek-v2-lite = []

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
hex = { workspace = true }
libloading = "0.9"
memmap2 = { workspace = true }
nvtx = { workspace = true }
pegainfer-core = { workspace = true }
pegainfer-engine = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
vllm-text = { workspace = true }

[lints]
workspace = true

[[test]]
name = "e2e_ep2"
path = "tests/e2e_ep2.rs"
required-features = ["deepseek-v2-lite"]

[[bin]]
name = "dsv2_lite_ep2_decode_attribution"
path = "src/bin/dsv2_lite_ep2_decode_attribution.rs"
required-features = ["deepseek-v2-lite"]
