[package]
edition = "2024"
name = "pegainfer-comm-cuda-lib"
publish = false

[features]
# Hardware backend feature: when on, the CUDA wrapper implementation is built
# and FFI types are re-exported. When off (default), this crate compiles to a
# near-empty shell exposing only the `HW_CUDA_ENABLED` diagnostic marker. The
# abstract PegaInfer-facing surface lives in the top-level `pegainfer-comm`
# crate, NOT here.
default = []
hw-cuda = [
    "cuda-sys/system-bindings",
    "cudart-sys/system-bindings",
    "gdrapi-sys/system-bindings",
]

[dependencies]
cuda-sys = { path = "../pegainfer-comm-cuda-sys", package = "pegainfer-comm-cuda-sys" }
cudart-sys = { path = "../pegainfer-comm-cudart-sys", package = "pegainfer-comm-cudart-sys" }
gdrapi-sys = { path = "../pegainfer-comm-gdrapi-sys", package = "pegainfer-comm-gdrapi-sys" }

libc = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
proc-lib = { path = "../pegainfer-comm-proc-lib", package = "pegainfer-comm-proc-lib", features = ["hw-cuda"] }
