[package]
edition = "2024"
links = "cudart"
name = "pegainfer-comm-cudart-sys"
publish = false

[features]
# Internal sys-crate feature. See `pegainfer-comm-cuda-sys/Cargo.toml` for the rationale.
default = []
system-bindings = []

[build-dependencies]
build-utils = { path = "../pegainfer-comm-build-utils", package = "pegainfer-comm-build-utils" }

bindgen = { workspace = true }
