[package]
edition = "2024"
name = "pegainfer-comm-fabric-debug"
publish = false

[features]
# When `hw-rdma` is off (default), this binary compiles as a stub that just
# prints a feature-disabled message at runtime. When on, the full fabric debug
# tool is built.
default = []
hw-rdma = ["fabric-lib/hw-rdma", "cuda-lib/hw-cuda"]

[dependencies]
fabric-lib = { path = "../pegainfer-comm-fabric-lib", package = "pegainfer-comm-fabric-lib" }
cuda-lib = { path = "../pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib" }
logging-lib = { path = "../pegainfer-comm-logging-lib", package = "pegainfer-comm-logging-lib", features = [] }

anyhow = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
