[package]
edition = "2024"
name = "pegainfer-comm-fabric-lib"
publish = false

[features]
# Hardware backend feature: when on, the Verbs RDMA implementation is built and
# the public surface (`FabricEngine`, `Worker`, `TransferEngine`, etc.) is
# exposed. When off (default), this crate compiles to a near-empty shell with
# only `HW_RDMA_ENABLED`. The abstract PegaInfer-facing surface lives in the
# top-level `pegainfer-comm` crate, NOT here.
default = []
hw-rdma = [
    "libibverbs-sys/system-bindings",
    "cuda-lib/hw-cuda",
]
tokio = ["dep:tokio", "tokio/sync", "tokio/rt-multi-thread"]

[dependencies]
libibverbs-sys = { path = "../pegainfer-comm-libibverbs-sys", package = "pegainfer-comm-libibverbs-sys" }

cuda-lib = { path = "../pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib" }
thread-lib = { path = "../pegainfer-comm-thread-lib", package = "pegainfer-comm-thread-lib" }

anyhow = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
syscalls = { workspace = true }
mockall = { workspace = true }

# Optional dependencies
tokio = { workspace = true, optional = true }
