[package]
edition = "2024"
name = "pegainfer-comm-logging-lib"
publish = false

[dependencies]
anyhow = { workspace = true }
is-terminal = { workspace = true }
# Inline clap rather than inherit pegainfer root's entry: this crate needs
# the `env` feature (#[clap(... env = "PPLX_LOG_FORMAT", ...)]) which the
# root entry does not enable. Keeping the override local to this wrapper
# avoids touching the root workspace.dependencies for the rest of the tree.
clap = { version = "4.6.1", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
