[package]
name = "pegainfer-comm-proc-lib"
edition = "2024"
publish = false

[lib]
proc-macro = true

[features]
# When `hw-cuda` is off (the default), the `gpu_test` proc-macro unconditionally
# marks the wrapped test as `#[ignore]`. When `hw-cuda` is on, the macro probes
# `cudaGetDeviceCount` at compile time of the consumer; if no CUDA device is
# visible, the test is `#[ignore]`d with a precise reason. This feature pulls
# `cudart-sys/system-bindings` so that the bindgen-generated FFI is available.
default = []
hw-cuda = ["dep:cudart-sys", "cudart-sys/system-bindings"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

cudart-sys = { path = "../pegainfer-comm-cudart-sys", package = "pegainfer-comm-cudart-sys", optional = true }
