[package]
edition = "2024"
name = "pegainfer-comm-python-ext"
publish = false

[lib]
name = "pplx_garden_python_ext"
crate-type = ["cdylib"]

[features]
# Hardware backend feature: when on, the full Python API surface is built
# (CudaMem, fabric, p2p-all-to-all). When off (default), the cdylib is a
# near-empty PyO3 module with a `HW_RDMA_ENABLED` attribute.
default = []
hw-rdma = [
    "p2p-all-to-all/hw-rdma",
    "fabric-lib/hw-rdma",
    "cuda-lib/hw-cuda",
    "torch-lib/hw-cuda",
]

[dependencies]
cuda-lib = { path = "../pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib" }
fabric-lib = { path = "../pegainfer-comm-fabric-lib", package = "pegainfer-comm-fabric-lib" }
logging-lib = { path = "../pegainfer-comm-logging-lib", package = "pegainfer-comm-logging-lib" }
thread-lib = { path = "../pegainfer-comm-thread-lib", package = "pegainfer-comm-thread-lib" }
torch-lib = { path = "../pegainfer-comm-torch-lib", package = "pegainfer-comm-torch-lib" }
p2p-all-to-all = { path = "../pegainfer-comm-p2p-all-to-all", package = "pegainfer-comm-p2p-all-to-all" }

bincode = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }
serde = { workspace = true }
tracing = { workspace = true }
