[package]
edition = "2024"
links = "torch-lib"
name = "pegainfer-comm-torch-lib"
publish = false

[features]
# Hardware backend feature: when on, the cxx bridge into LibTorch + CUDA is
# built. When off (default), the crate compiles to a shell with only
# `HW_CUDA_ENABLED`; `build.rs` does not probe Torch / CUDA.
default = []
hw-cuda = ["cuda-lib/hw-cuda"]

[dependencies]
cxx = { workspace = true }
pyo3 = { workspace = true }
cuda-lib = { path = "../pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib" }

[build-dependencies]
cxx-build = { workspace = true }
pkg-config = { workspace = true }
